Pre: Add a top-level "syncable" feature.
Tested with:

cargo build --manifest-path tools/cli/Cargo.toml --no-default-features
cargo run --manifest-path tools/cli/Cargo.toml --no-default-features debugcli

Co-authored-by: Nick Alexander <nalexander@mozilla.com>

--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.0.1"
 default = ["bundled_sqlite3"]
 sqlcipher = ["mentat/sqlcipher"]
 bundled_sqlite3 = ["mentat/bundled_sqlite3"]
+syncable = ["mentat/syncable"]
 
 [lib]
 name = "mentat_cli"
